Set up Firebase Hosting with GitHub Actions

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "festive-cure-care"
-  }
+    "default": "festive-care-cure-69ee4",
+    " default": "festive-care-cure-69ee4"
+  },
+  "targets": {},
+  "etags": {}
 }
